--- a/templates/index2.html
+++ b/templates/index2.html
@@ -110,83 +110,15 @@
           </tr>
         </thead>
         <tbody>
+          {% for i in rows %}
           <tr>
-            <th scope="row">1</th>
-            <td>Bag(Laptop)</td>
-            <td>2000.0</td>
-            <td>2500</td>
-            <td>3</td>
-            <td>product</td>
-            <td><button class="btn btn-warning"><i class="bi bi-coin" value="sale"></i></button></td>
-            <td><button class="btn btn-primary"><i class="bi bi-pencil-square" value="edit"></i></button></td>
-            <td><button class="btn btn-danger"><i class="bi bi-trash3" value="delete"></i></button></td>
+              <td>{{ i[0] }}</td>
+              <td>{{ i[1] }}</td>
+               <td>{{ i[2] }}</td>
+               <td>{{ i[3] }}</td>
+               <td>{{ i[4] }}</td>
           </tr>
-          <tr>
-            <th scope="row">2</th>
-            <td>Repair</td>
-            <td>150.0</td>
-            <td>200.0</td>
-            <td>1</td>
-            <td>service</td>
-            <td><button class="btn btn-warning"><i class="bi bi-coin" value="sale"></i></button></td>
-            <td><button class="btn btn-primary"><i class="bi bi-pencil-square" value="edit"></i></button></td>
-            <td><button class="btn btn-danger"><i class="bi bi-trash3" value="delete"></i></button></td>
-          </tr>
-          <tr>
-            <th scope="row">3</th>
-            <td>Banana</td>
-            <td>4.0</td>
-            <td>6.0</td>
-            <td>20</td>
-            <td>product</td>
-            <td><button class="btn btn-warning"><i class="bi bi-coin" value="sale"></i></button></td>
-            <td><button class="btn btn-primary"><i class="bi bi-pencil-square" value="edit"></i></button></td>
-            <td><button class="btn btn-danger"><i class="bi bi-trash3" value="delete"></i></button></td>
-          </tr>
-          <tr>
-            <th scope="row">4</th>
-            <td>Mango</td>
-            <td>10.0</td>
-            <td>15.0</td>
-            <td>3</td>
-            <td>product</td>
-            <td><button class="btn btn-warning"><i class="bi bi-coin" value="sale"></i></button></td>
-            <td><button class="btn btn-primary"><i class="bi bi-pencil-square" value="edit"></i></button></td>
-            <td><button class="btn btn-danger"><i class="bi bi-trash3" value="delete"></i></button></td>
-          </tr>
-          <tr>
-            <th scope="row">5</th>
-            <td>Silk jacket</td>
-            <td>1000.0</td>
-            <td>4000.0</td>
-            <td>40</td>
-            <td>product</td>
-            <td><button class="btn btn-warning"><i class="bi bi-coin" value="sale"></i></button></td>
-            <td><button class="btn btn-primary"><i class="bi bi-pencil-square" value="edit"></i></button></td>
-            <td><button class="btn btn-danger"><i class="bi bi-trash3" value="delete"></i></button></td>
-          </tr>
-          <tr>
-            <th scope="row">6</th>
-            <td>Test 2</td>
-            <td>5.0</td>
-            <td>10.0</td>
-            <td>1</td>
-            <td>product</td>
-            <td><button class="btn btn-warning"><i class="bi bi-coin" value="sale"></i></button></td>
-            <td><button class="btn btn-primary"><i class="bi bi-pencil-square" value="edit"></i></button></td>
-            <td><button class="btn btn-danger"><i class="bi bi-trash3" value="delete"></i></button></td>
-          </tr>
-          <tr class="last">
-            <th scope="row">7</th>
-            <td>Chaket</td>
-            <td>150.0</td>
-            <td>500.0</td>
-            <td>5</td>
-            <td>product</td>
-            <td><button class="btn btn-warning"><i class="bi bi-coin" value="sale"></i></button></td>
-            <td><button class="btn btn-primary"><i class="bi bi-pencil-square" value="edit"></i></button></td>
-            <td><button class="btn btn-danger"><i class="bi bi-trash3" value="delete"></i></button></td>
-          </tr>
+          {% endfor %}
         </tbody>
       </table>
       <span class="d-flex justify-content-between"><p >Showing 1 - 7 of 7 entries</p>
