--- a/templates/index2.html
+++ b/templates/index2.html
@@ -6,6 +6,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.4/font/bootstrap-icons.css">
     <title>My Duka</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <link rel="stylesheet" href="//cdn.datatables.net/1.13.4/css/jquery.dataTables.min.css">
+
   </head>
   <style>
     img{
@@ -95,7 +97,7 @@
   </select> entries</span>
         <span>Search: <input type="search"></span>
       </div>
-    <table class="table">
+    <table id="myTable" class="table">
         <thead>
           <tr>
             <th scope="col">I.D</th>
@@ -103,17 +105,13 @@
             <th scope="col">B.P</th>
             <th scope="col">S.P</th>
             <th scope="col">QUANTITY</th>
-            <th scope="col">CATEGORY</th>
-            <th scope="col">Sale<br><i class="bi bi-coin"></i></th>
-            <th scope="col">Edit<br><i class="bi bi-pencil-square"></i></th>
-            <th scope="col">Delete<br><i class="bi bi-trash3"></i></th>
           </tr>
         </thead>
         <tbody>
           {% for i in rows %}
           <tr>
-              <td>{{ i[0] }}</td>
-              <td>{{ i[1] }}</td>
+               <td>{{ i[0] }}</td>
+               <td>{{ i[1] }}</td>
                <td>{{ i[2] }}</td>
                <td>{{ i[3] }}</td>
                <td>{{ i[4] }}</td>
@@ -138,6 +136,11 @@
       </span>
     </div>
   </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js" integrity="sha512-pumBsjNRGGqkPzKHndZMaAG+bir374sORyzM3uulLV14lN5LyykqNk8eEeUlUkB3U0M4FApyaHraT65ihJhDpQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  <script src="//cdn.datatables.net/1.13.4/js/jquery.dataTables.min.js" type="text/javascript"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+  <script>
+    let table = new DataTable('#myTable');
+  </script>
   </body>
 </html>
