--- a/templates/sales.html
+++ b/templates/sales.html
@@ -81,66 +81,76 @@
           </div>
     </div>  
 
-    <div class="container-sm mt-0 me-5 col-9">
-      <div class="container d-flex justify-content-center">
-        
-        <button class="btn btn-primary mt-2 "><i class="bi bi-plus-circle"></i> Add new item</button>
-        
+    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body">
+            <form method="post" action="/save-sales">
+               <div class="row mb-3">
+                
+              <div class="row mb-3">
+                <select name="pid">
+                  {%for i in products%}
+                  <option value="{{i[0]}}">{{i[1]}}</option>
+                  {%endfor%}
+                  
+                </select>
+                </div>
+                <div class="row mb-3">
+                  <label for="inputquantity" class="col-sm-2 col-form-label">Quantity</label>
+                  <div class="col-sm-10">
+                    <input type="text" name="quantity"class="form-control" id="quantity">
+                  </div>
+                  
+            </div>
+             <button type="submit" class="btn btn-primary" value="submit">Submit</button>
+           
+          </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+            </div> 
+          </form>
+          </div>
+          </div>
       </div>
-      <div class="d-flex justify-content-between">
-        <span><label for="entries">Show</label>
-  <select id="entries" name="entries">
-    <option value="10">10</option>
-    <option value="30">30</option>
-    <option value="50">50</option>
-    <option value="100">100</option>
-  </select> entries</span>
-        <span>Search: <input type="search"></span>
-      </div>
-    <table id="myTable" class="table">
-        <thead>
-          <tr>
-            <th scope="col">I.D</th>
-            <th scope="col">NAME</th>
-            <th scope="col">B.P</th>
-            <th scope="col">S.P</th>
-            <th scope="col">QUANTITY</th>
-          </tr>
-        </thead>
-        <tbody>
-          {% for i in rows %}
-          <tr>
-               <td>{{ i[0] }}</td>
-               <td>{{ i[1] }}</td>
-               <td>{{ i[2] }}</td>
-               <td>{{ i[3] }}</td>
-               <td>{{ i[4] }}</td>
-          </tr>
-          {% endfor %}
-        </tbody>
-      </table>
-      <span class="d-flex justify-content-between"><p >Showing 1 - 7 of 7 entries</p>
-      <nav aria-label="Page navigation example">
-        <ul class="pagination justify-content-end ">
-          <li class="page-item">
-            <a class="page-link bg-primary-subtle">Previous</a>
-          </li>
-          <li class="page-item"><a class="page-link" href="#">1</a></li>
-          <li class="page-item"><a class="page-link" href="#">2</a></li>
-          <li class="page-item"><a class="page-link" href="#">3</a></li>
-          <li class="page-item">
-            <a class="page-link bg-primary-subtle" href="#">Next</a>
-          </li>
-        </ul>
-      </nav>
-      </span>
     </div>
-  </div>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js" integrity="sha512-pumBsjNRGGqkPzKHndZMaAG+bir374sORyzM3uulLV14lN5LyykqNk8eEeUlUkB3U0M4FApyaHraT65ihJhDpQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-  <script src="//cdn.datatables.net/1.13.4/js/jquery.dataTables.min.js" type="text/javascript"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
-  <script>
-    let table = new DataTable('#myTable');
-  </script>
+    
+    <h1>MY SALES</h1>
+          <table class="table table-bordered"  id="myTable2">
+            <thead>
+              <tr>
+                <th>ID</th>
+                <th>Product Name</th>
+                <th>Quantity</th>
+                <th>Created_at</th>
+              </tr>
+            </thead>
+              <tbody>
+              
+                {%for i in sales%}
+              <tr>
+                <td>{{ i[0] }}</td>
+                <td>{{ i[1] }}</td>
+                <td>{{ i[2] }}</td>
+                <td>{{ i[3] }}</td>
+              </tr>
+              {%endfor%}
+              
+              </tbody>
+          </table>
+        </div>
+        <div class="col-lg-2 col-md-2 col-sm-1"></div>
+    </div>
+          <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js" integrity="sha512-pumBsjNRGGqkPzKHndZMaAG+bir374sORyzM3uulLV14lN5LyykqNk8eEeUlUkB3U0M4FApyaHraT65ihJhDpQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+        <script type="text/javascript" src="//cdn.datatables.net/1.13.4/js/jquery.dataTables.min.js"></script>
+        <script>
+          let table = new DataTable('#myTable2');
+        </script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
   </body>
+  
 </html>
